kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time-machine
  labels:
    app: time-machine
spec:
  replicas: 1
  template:
    metadata:
      name: time-machine
      labels:
        app: time-machine
    spec:
      containers:
        - name: time-machine
          image: time-machine
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: time-machine
