kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: time-machine
spec:
  selector:
    app: time-machine
  ports:
    - port: 8080
  type: NodePort
